Fixed fields overflowing, finished Instructions screen and fixed other small styling issues

--- a/src/components/pages/Exercise/CreateExercise.module.css
+++ b/src/components/pages/Exercise/CreateExercise.module.css
@@ -7,10 +7,14 @@
     flex-direction: column;
     gap: 15px;
 }
+.createExercise form{
+    width: 100%;
+}
 .createExercise .exerciseInfo{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    height: 230px;
 }
 .createExercise .inputGroup{
     display: grid;
@@ -55,8 +59,8 @@
 }
 .createExercise .screenContainer{
     width: 100%;
-    height: calc(100% - 250px);
-    
+    height: calc(100% - 230px - 50px - 20px);
+    overflow: hidden;
 }
 .createExercise .screen{
     height: 100%;
@@ -65,6 +69,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    border: 1px solid red;
 }
 .addTagButton{
     width: 100%;
